# foodgen

./: .dockerignore  .gitignore  config.dockerfile  data.dockerfile  data_download.yaml  development.yaml  docker-compose.yaml  pyproject.toml  setup.sh  train.dockerfile  train.yaml  train_vqganvae.dockerfile  train_vqganvae.py
config/: vqganvae.yaml
data/: download.py  food101.py
models/: __init__.py
models/maskgit/: maskgit.py  t5.py  vqgan_vae.py
script/: vqganvae.sh
trainer/: __init__.py  maskgit.py  vqganvae.py
utils/: config.py
weight/: download_vgg_16.sh
